# squamish_experiments

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  create_importance_figures.py  debug.py  metrics.py  plot_featsel_with_stat_threshold.py  prec_recall_on_AR_set.py  pyproject.toml  run_NL_comparison.py  utils.py
.github/workflows/: docker-publish.yml
.ipynb_checkpoints/: Analyze AR selection rate grouped by feature class on NL data-checkpoint.ipynb
data/: FLIP.csv  Fibrosis.csv  Herz.csv  Herz_Tod.csv  SPECTF.csv  adrenal.mat  summary-datasets.docx
notes/: Analyze AR selection rate grouped by feature class on NL data.ipynb  Debug score of RFE method and runtime.ipynb  Test NL Pair.ipynb  Toy FS Eval.ipynb  Untitled.ipynb  Untitled1.ipynb  Visualize All relevant selection accuracy.ipynb  find_best_parameters.ipynb  importance threshold static vs dynamic.ipynb  pairwise feature behaviour.ipynb  prototype.ipynb  relevance_values.ipynb
notes/.ipynb_checkpoints/: Test NL Pair-checkpoint.ipynb  Toy FS Eval-checkpoint.ipynb  Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb  find_best_parameters-checkpoint.ipynb  importance threshold static vs dynamic-checkpoint.ipynb  prototype-checkpoint.ipynb  relevance_values-checkpoint.ipynb  tree importances-checkpoint.ipynb
output/tables/: prec_rec_ARFS.tex  prec_rec_ARFS_mean.tex  runtime.tex  runtime.txt  sim_accuracy.tex  sim_accuracy.txt  sim_params.txt  sim_scores.tex  sim_scores.txt
runner/: .gitignore  PaperDoubleFig.mplstyle  SGE.sh  __init__.py  experiment_pipeline.py  fsmodel.py  import_data.py  import_data_ordinal.py  job.py  linear_models.py  paper_output.py  process_results.py  pyproject.toml  requirements.txt  run.py
tmp/: NL_experiment_results.csv  NL_experiment_results.pickle
(+13 files in other folders)
