[tool.poetry]
name = "ijcnn_exp"
version = "0.1.0"
description = ""
authors = ["Lukas Pfannschmidt <lukas@lpfann.me>"]

[tool.poetry.dependencies]
python = "^3.7"
squamish = {path = "../../squamish"}
jupyterlab = "^1.2.5"
jupyter = "^1.0.0"
arfs-gen = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
