[tool.poetry]
name = "ijcnn_exp"
version = "0.1.0"
description = ""
authors = ["Lukas Pfannschmidt <lukas@lpfann.me>"]

[tool.poetry.dependencies]
python = "^3.7"
#squamish = {path = "../../squamish"}
squamish =  {git = "https://github.com/lpfann/squamish"}
jupyterlab = "^1.2.5"
jupyter = "^1.0.0"
arfs-gen = "^1.1"
#arfs-gen = {path = "../../arfs-gen"}

dill = "^0.3.1"
numpy = "^1.17.3"
imbalanced-learn = ">=0.4.2"
pandas = ">=0.20"
tqdm = "^4.36.1"
feather-format = "^0.4.0"
seaborn = "^0.9.0"
joblib = "^0.14.0"
fri = "^8.0"
dask = "^2.6.0"
dask_jobqueue = "^0.7.0"
networkx = "^2.4"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
