[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["Lukas Pfannschmidt <mirek.1337@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
dill = "^0.3.1"
numpy = "^1.17.3"
scikit-learn = ">=0.20"
imbalanced-learn = ">=0.4.2"
pandas = ">=0.20"
tqdm = "^4.36.1"
feather-format = "^0.4.0"
seaborn = "^0.9.0"
joblib = "^0.14.0"
fri = "^7.1.0"
dask = "^2.6.0"
dask_jobqueue = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
